1.qrcode模块：扫描二维码增加处理间隔。

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,4 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
-fastlane/readme.md
-src/main/res/drawable/
+fastlane/readme.mdZ
